--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "cross-env": "^7.0.3",
     "scratch-audio": "github:TurboWarp/scratch-audio#develop",
     "scratch-render": "github:TurboWarp/scratch-render#develop",
-    "scratch-vm": "github:TurboWarp/scratch-vm#develop",
+    "scratch-vm": "github:DashBlocks/scratch-vm#develop-module",
     "webpack": "^4.47.0",
     "webpack-cli": "^4.10.0"
   },
